# adhlal

./: .gitignore  CHANGELOG.md  CLIENT_ONBOARDING.md  README.md  env.example  pyproject.toml
src/etl/: __init__.py  __main__.py  constants.py  extract.py  generic_analysis.py  load.py  models.py  openai_utils.py  schema_factory.py  student_analysis.py  transform.py  transform_generic.py
src/etl/configs/: CONFIG_SPEC.md  employer.yml  student.yml
src/etl/helpers/: windows_loop.py
